--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,272 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+:root {
+  --blue: #282C34;
+  --white: rgb(236, 236, 236);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding-top: 10px;
+  font-family: "Roboto", sans-serif;
+  color: var(--text-color);
+  letter-spacing: 0.7px;
+  width: 100vw;
+  background: var(--background-color);
+  transition: background 0.3s ease-in-out, color 0.5s ease-in-out;
+}
+body.light{
+  --background-color: var(--white);
+  --text-color: var(--blue);
+}
+body.dark{
+  --background-color: var(--blue);
+  --text-color: var(--white);
+}
+.container{
+  width: 95vw;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80vw;
+  margin: auto;
+  padding: 20px 0 60px 0;
+}
+.header a{
+  text-decoration: none;
+  color: var(--text-color);
+
+}
+.title {
+  font-weight: 400;
+  letter-spacing: 2px;
+  font-size: 64px;
+}
+.cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 30px;
+  margin-bottom: 30px;
+}
+
+.card {
+  background-color: #e2e2e2;
+  border-radius: 8px;
+  padding: 16px 18px;
+  margin: 8px auto;
+  min-height: 100px;
+  max-height: fit-content;
+  width: 400px;
+  color: #333;
+  z-index: 1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  overflow: hidden;
+  border: 1px solid #cccccc;
+}
+.card:hover{
+  transition: all 0.1s ease-out;
+  box-shadow: 0px 4px 8px rgba(207, 207, 207, 0.3);
+  border: 1px solid #cccccc;
+  background-color: #f5f5f5;
+}
+.card-top {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+.card-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.options {
+  outline: none;
+  border: none;
+  background: transparent;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: 100;
+  margin: 0 10px;
+}
+
+.custom-remove{
+  outline: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: none;
+  background-color: #e04462;
+}
+.custom-done{
+  outline: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: none;
+  margin-left: 8px;
+  background-color: #1eae98;
+}
+.custom-done:hover, .custom-remove:hover{
+  width: 20px;
+  height: 20px;
+}
+
+.custom-text{
+  padding-left: 4px;
+  font-size: 17px;
+}
+
+.line{
+  text-decoration: line-through;
+  text-decoration-style: double;
+  color: #e04462;
+}
+.form {
+  width: 410px;
+  margin: 0 auto;
+  left: 8px;
+  text-align: center;
+  right: 10px;
+  top: 0;
+}
+.input-title {
+  width: 60%;
+  margin: 0 auto;
+  position: absolute;
+  left: 8px;
+  right: 10px;
+  top: 110px;
+}
+
+input[type='text'] {
+  width: 100%;
+  margin: auto;
+  font-size: 22px;
+  padding: 8px 16px;
+  outline: none;
+  border: none;
+  background: transparent;
+  border-radius: 6px;
+  color: var(--text-color);
+  margin-top: 20px;
+ text-align: center;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  padding: 10px;
+  width: 100%;
+  font-weight: 100;
+  text-align: center;
+  color: var(--text-color);
+  z-index: 1;
+}
+
+.footer a {
+  text-decoration: none;
+  font-weight: 400;
+  color: #fff;
+  padding-left: 8px;
+  color: var(--text-color);
+
+}
+.footer a:hover{
+  font-size: 20px;
+}
+
+.task{
+  word-break: break-word;
+  width: 360px;
+  background-color: transparent;
+  border: none;
+  padding-right: 20px;
+  margin-bottom: 20px;
+  font-size: 19px;
+  line-height: 20px;
+}
+.none{
+  display: none;
+}
+.voice-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+  font-size: 20px;
+}
+.voice-cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding-top: 20px;
+}
+.voice-card{
+  background-color: #e2e2e2;
+  border-radius: 8px;
+  padding: 16px 18px;
+  margin: 8px auto;
+  min-height: fit-content;
+  max-height: fit-content;
+  width: fit-content;
+  color: #333;
+  z-index: 1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  overflow: hidden;
+  font-size: 20px;
+  border: 1px solid #cccccc;
+}
+.voice-card:hover{
+  transition: all 0.1s ease-out;
+  box-shadow: 0px 4px 8px rgba(207, 207, 207, 0.3);
+  border: 1px solid #cccccc;
+  background-color: #f5f5f5;
+}
+.date{
+  font-size: 13px;
+  padding-bottom: 13px;
+  color: #767676;
+}
+.voice-icon{
+  font-size: 42px;
+  padding-top: 12px;
+  cursor: pointer;
+}
+/* media */
+@media(min-width:800px) {
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-top: 4px;
+    margin-top: 30px;
+  }
+  .check{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .input-show {
+    top: 40px;
+    width: 460px;
+    float: right;
+  }
 }
