--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   letter-spacing: 0.7px;
   width: 100vw;
   background: var(--background-color);
-  transition: background 0.3s ease-in-out, color 0.5s ease-in-out;
+  transition: background 0.3s ease-in-out, color 0.6s ease-in-out;
 }
 body.light{
   --background-color: var(--white);
@@ -175,7 +175,8 @@ input[type='text'] {
   font-weight: 100;
   text-align: center;
   color: var(--text-color);
-  background: var(--background-color);
+  background:var(--background-color);
+  transition: background 0.3s ease-in-out, color 0.6s ease-in-out;
   z-index: 1;
 }
 
@@ -228,7 +229,7 @@ input[type='text'] {
   margin: 8px auto;
   min-height: fit-content;
   max-height: fit-content;
-  width: fit-content;
+  max-width: 400px;
   color: #333;
   z-index: 1;
   display: flex;
@@ -237,7 +238,8 @@ input[type='text'] {
   flex-direction: column;
   overflow: hidden;
   font-size: 20px;
-  border: 1px solid #cccccc;
+  border: 1px solid #a5a4a4;
+  margin-bottom: 80px;
 }
 .voice-card:hover{
   transition: all 0.1s ease-out;
@@ -247,8 +249,10 @@ input[type='text'] {
 }
 .date{
   font-size: 13px;
-  padding-bottom: 13px;
+  padding-bottom: 4px;
   color: #767676;
+  text-align: left;
+
 }
 .voice-icon{
   font-size: 42px;
@@ -256,7 +260,18 @@ input[type='text'] {
   cursor: pointer;
 }
 .voice-text{
-  padding-bottom: 10px;
+  margin-bottom: 26px;
+  padding-bottom: 4px;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+
+}
+.voice-top{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 .custom-remove-voice{
   outline: none;
@@ -265,14 +280,23 @@ input[type='text'] {
   border-radius: 50%;
   border: none;
   background-color: #e04462;
+  cursor: pointer;
 }
+.custom-remove-voice:hover{
+  width: 20px;
+  height: 20px;
+}
+
 /* media */
-@media(min-width:800px) {
+@media(min-width:850px) {
   .cards {
     flex-direction: row;
     flex-wrap: wrap;
     padding-top: 4px;
     margin-top: 30px;
+  }
+  .voice-card{
+    max-width: 90%;
   }
   .check{
     flex-direction: row;
